modules/nasibu/nasibu.h

typedef uint32_t u32_;
typedef struct kmalloc_heap {
  uint8_t _unused[0];
} kmalloc_heap;
typedef unsigned long ulong;
typedef bool (*virtual_alloc_and_map_func)(ulong vaddr, size_t page_count);
typedef void (*virtual_free_and_unmap_func)(ulong vaddr, size_t page_count);
typedef struct kmalloc_acc {
  u32_ elem_size;
  u32_ elem_count;
  u32_ curr_elem;
  char *buf;
} kmalloc_acc;
extern void not_reached(const char *file, int line);
extern void not_implemented(const char *file, int line);
extern void assert_failed(const char *expr, const char *file, int line);
extern void early_init_kmalloc(void);
extern void init_kmalloc(void);
extern void *general_kmalloc(size_t *size, u32_ flags);
extern void general_kfree(void *ptr, size_t *size, u32_ flags);
extern bool is_kmalloc_initialized(void);
extern bool kmalloc_create_heap(struct kmalloc_heap *h,
                                ulong vaddr,
                                size_t size,
                                size_t min_block_size,
                                size_t alloc_block_size,
                                bool linear_mapping,
                                void *metadata_nodes,
                                virtual_alloc_and_map_func valloc,
                                virtual_free_and_unmap_func vfree);
extern struct kmalloc_heap *kmalloc_create_regular_heap(ulong vaddr,
                                                        size_t size,
                                                        size_t min_block_size);
extern void kmalloc_destroy_heap(struct kmalloc_heap *h);
extern struct kmalloc_heap *kmalloc_heap_dup(struct kmalloc_heap *h);
extern struct kmalloc_heap *kmalloc_heap_dup_expanded(struct kmalloc_heap *h, size_t sz);
extern void *per_heap_kmalloc(struct kmalloc_heap *h, size_t *size, u32_ flags);
extern void per_heap_kfree(struct kmalloc_heap *h, void *ptr, size_t *size, u32_ flags);
extern void kmalloc_create_accelerator(struct kmalloc_acc *a, u32_ elem_s, u32_ elem_c);
extern void *kmalloc_accelerator_get_elem(struct kmalloc_acc *a);
extern void kmalloc_destroy_accelerator(struct kmalloc_acc *a);
extern void *kzmalloc(size_t size);
extern size_t kmalloc_get_heap_struct_size(void);
extern size_t kmalloc_get_max_tot_heap_free(void);
extern void *aligned_kmalloc(size_t size, u32_ align);
extern void aligned_kfree2(void *ptr, size_t size);
extern void *vmalloc(size_t size);
extern void vfree2(void *ptr, size_t size);