modules/nasibu/tilck.rs

extern "C" {
    pub fn not_reached(file: *const cty::c_char, line: cty::c_int);
}
extern "C" {
    pub fn not_implemented(file: *const cty::c_char, line: cty::c_int);
}
extern "C" {
    pub fn assert_failed(expr: *const cty::c_char, file: *const cty::c_char, line: cty::c_int);
}
pub type virtual_alloc_and_map_func =
    ::core::option::Option<unsafe extern "C" fn(vaddr: ulong, page_count: size_t) -> bool>;
pub type virtual_free_and_unmap_func =
    ::core::option::Option<unsafe extern "C" fn(vaddr: ulong, page_count: size_t)>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct kmalloc_heap {
    _unused: [u8; 0],
}
extern "C" {
    pub fn early_init_kmalloc();
}
extern "C" {
    pub fn init_kmalloc();
}
extern "C" {
    pub fn general_kmalloc(size: *mut size_t, flags: u32_) -> *mut cty::c_void;
}
extern "C" {
    pub fn general_kfree(ptr: *mut cty::c_void, size: *mut size_t, flags: u32_);
}
extern "C" {
    pub fn is_kmalloc_initialized() -> bool;
}
extern "C" {
    pub fn kmalloc_create_heap(
        h: *mut kmalloc_heap,
        vaddr: ulong,
        size: size_t,
        min_block_size: size_t,
        alloc_block_size: size_t,
        linear_mapping: bool,
        metadata_nodes: *mut cty::c_void,
        valloc: virtual_alloc_and_map_func,
        vfree: virtual_free_and_unmap_func,
    ) -> bool;
}
extern "C" {
    pub fn kmalloc_create_regular_heap(
        vaddr: ulong,
        size: size_t,
        min_block_size: size_t,
    ) -> *mut kmalloc_heap;
}
extern "C" {
    pub fn kmalloc_destroy_heap(h: *mut kmalloc_heap);
}
extern "C" {
    pub fn kmalloc_heap_dup(h: *mut kmalloc_heap) -> *mut kmalloc_heap;
}
extern "C" {
    pub fn kmalloc_heap_dup_expanded(h: *mut kmalloc_heap, sz: size_t) -> *mut kmalloc_heap;
}
extern "C" {
    pub fn per_heap_kmalloc(
        h: *mut kmalloc_heap,
        size: *mut size_t,
        flags: u32_,
    ) -> *mut cty::c_void;
}
extern "C" {
    pub fn per_heap_kfree(
        h: *mut kmalloc_heap,
        ptr: *mut cty::c_void,
        size: *mut size_t,
        flags: u32_,
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct kmalloc_acc {
    pub elem_size: u32_,
    pub elem_count: u32_,
    pub curr_elem: u32_,
    pub buf: *mut cty::c_char,
}
#[test]
fn bindgen_test_layout_kmalloc_acc() {
    assert_eq!(
        ::core::mem::size_of::<kmalloc_acc>(),
        16usize,
        concat!("Size of: ", stringify!(kmalloc_acc))
    );
    assert_eq!(
        ::core::mem::align_of::<kmalloc_acc>(),
        4usize,
        concat!("Alignment of ", stringify!(kmalloc_acc))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<kmalloc_acc>())).elem_size as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(kmalloc_acc),
            "::",
            stringify!(elem_size)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<kmalloc_acc>())).elem_count as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(kmalloc_acc),
            "::",
            stringify!(elem_count)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<kmalloc_acc>())).curr_elem as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(kmalloc_acc),
            "::",
            stringify!(curr_elem)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<kmalloc_acc>())).buf as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(kmalloc_acc),
            "::",
            stringify!(buf)
        )
    );
}
extern "C" {
    pub fn kmalloc_create_accelerator(a: *mut kmalloc_acc, elem_s: u32_, elem_c: u32_);
}
extern "C" {
    pub fn kmalloc_accelerator_get_elem(a: *mut kmalloc_acc) -> *mut cty::c_void;
}
extern "C" {
    pub fn kmalloc_destroy_accelerator(a: *mut kmalloc_acc);
}
extern "C" {
    pub fn kzmalloc(size: size_t) -> *mut cty::c_void;
}
extern "C" {
    pub fn kmalloc_get_heap_struct_size() -> size_t;
}
extern "C" {
    pub fn kmalloc_get_max_tot_heap_free() -> size_t;
}
extern "C" {
    pub fn aligned_kmalloc(size: size_t, align: u32_) -> *mut cty::c_void;
}
extern "C" {
    pub fn aligned_kfree2(ptr: *mut cty::c_void, size: size_t);
}
extern "C" {
    pub fn vmalloc(size: size_t) -> *mut cty::c_void;
}
extern "C" {
    pub fn vfree2(ptr: *mut cty::c_void, size: size_t);
}
pub type __builtin_va_list = *mut cty::c_char;
